Replace launch4j with jpackage to create exe files
Uses jlink to make a custom Java runtime with only the required modules,
then uses jpackage to make a portable app including it.

This change means the app no longer needs a JRE installed to run.